# bayonne-cygwin

./: ProjectHome.md
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/: AUTHORS  ChangeLog  Makefile  Makefile.in  NEWS  config.status  configure.ac  reconfig
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/audio/: Makefile  Makefile.am  Makefile.in  convert
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/binders/: Makefile.am  Makefile.in
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/config/: Makefile.am  Makefile.in  bayonne.init  dialed.conf  driver.conf  module.conf  runlevel.conf  sip.conf  startup.conf  timeslot.conf  web.conf
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/docs/: Doxyfile.in  Makefile.am  images.tex  install.tex  script.idx  script.toc
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/engine/: Makefile  Makefile.am  Makefile.in  bayonne.cpp  bayonne.h  binder.cpp  buffer.cpp  config.cpp  engine.h  libbayonne.pc  msgport.cpp  service.cpp  span.cpp  stamp-h1  states.cpp  sysexec.cpp  translators.cpp
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/modules/: Makefile.am
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/scripts/: Libexec.java  audio_strip.sh  libexec.cs  libexec.def  libexec.php  libexec.py  macros-us.def  memopad.mac  sox_ogg.sh  sys_ifconfig.sh  tts.def  tts_festival.sh
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/server/: Makefile.am  Makefile.in  checks.cpp  config.cpp  methods.cpp  property.cpp  runner.c  runtime.cpp  server.cpp  thread.cpp
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/tests/: checkit  dumpcfg.bat  dumpit.bat  dumpreg.bat  exit.scr  grindit  inkey.scr  input.scr  lang.scr  libpnet.scr  libpython.scr  menu.scr  pathtest.scr  testit  testit.bat  ttsvirt.scr
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/utils/: Makefile.in  audiosync  btsencode.c  btsexec.c  ttstool
 bayonne-cygwin --username wilson.tangweisheng/bayonne2-2.3.2/w32/: bayonne.dsw  bayonne.sln  de.dsp  en.vcproj  es.dsp  fr.vcproj  it.vcproj  ru.dsp  ru.vcproj  server.dsp  server.vcproj  soundcard.vcproj  voicetronix.dsp  voicetronix.vcproj  webservice.dsp
 bayonne-cygwin --username wilson.tangweisheng/ccaudio2-1.0.0/: ChangeLog  Makefile  Makefile.am  NEWS  README  THANKS  ccaudio2.list  ccaudio2.list.in  ccaudio2.spec.in  libccaudio2.pc  libccaudio2.pc.in  stamp-h1
 bayonne-cygwin --username wilson.tangweisheng/ccaudio2-1.0.0/codecs/: Makefile  Makefile.am  adpcm.cpp  codecs.h  g711.cpp  gsm.cpp  speex.cpp
 bayonne-cygwin --username wilson.tangweisheng/ccaudio2-1.0.0/doc/: Doxyfile  Makefile.in
 bayonne-cygwin --username wilson.tangweisheng/ccaudio2-1.0.0/m4/: Makefile.in  ost_endian.m4  ost_maint.m4  ost_portable.m4  ost_posix.m4  ost_prog.m4  ost_threading.m4
 bayonne-cygwin --username wilson.tangweisheng/ccaudio2-1.0.0/nbproject/: Package-Default.bash  configurations.xml
 bayonne-cygwin --username wilson.tangweisheng/ccaudio2-1.0.0/src/: audio2.h  audiobase.cpp  buffer.cpp  fileio.cpp  friends.cpp
 bayonne-cygwin --username wilson.tangweisheng/ccaudio2-1.0.0/utils/: Makefile.in  audiotool.h  build.cpp  packetdump.cpp  play.cpp  strip.cpp  tonedetect.cpp  tones.conf  tonetool.1  tonetool.cpp  tonetool.h  tonewrite.cpp  trim.cpp
 bayonne-cygwin --username wilson.tangweisheng/ccaudio2-1.0.0/w32/: Makefile  audiotool.vcproj  ccaudio2.dsp  ccaudio2.rc  ccaudio2.sln  ccaudio2.vcproj  g711.vcproj  gsm.vcproj  tonetool.vcproj
 bayonne-cygwin --username wilson.tangweisheng/ccscript-4.1.3/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  SUPPORT  ccscript-config  config.h  config.status  libtool
 bayonne-cygwin --username wilson.tangweisheng/ccscript-4.1.3/doc/: Makefile  Makefile.am  script.tex
 bayonne-cygwin --username wilson.tangweisheng/ccscript-4.1.3/inc/: Makefile.am
 bayonne-cygwin --username wilson.tangweisheng/ccscript-4.1.3/nbproject/: Makefile-Default.mk  Package-Default.bash  configurations.xml
 bayonne-cygwin --username wilson.tangweisheng/ccscript-4.1.3/src/: Makefile  Makefile.in  checks.cpp  interp.cpp
 bayonne-cygwin --username wilson.tangweisheng/ccscript-4.1.3/test/: Makefile  Makefile.am  Makefile.in  testscript.cpp  testscript.scr
 bayonne-cygwin --username wilson.tangweisheng/ccscript3-1.1.7/: Makefile  Makefile.am  NEWS  TODO  config.status  configure  configure.ac  libtool
 bayonne-cygwin --username wilson.tangweisheng/ccscript3-1.1.7/modules/: Makefile  csv.cpp  locker.cpp  odbc.dso  sort.cpp  url.cpp  userauth.cpp
 bayonne-cygwin --username wilson.tangweisheng/ccscript3-1.1.7/nbproject/: Makefile-Default.mk  Package-Default.bash  project.xml
 bayonne-cygwin --username wilson.tangweisheng/ccscript3-1.1.7/optional/: Makefile  Makefile.am  Makefile.in
 bayonne-cygwin --username wilson.tangweisheng/ccscript3-1.1.7/src/: Makefile  binder.cpp  interp.cpp  methods.cpp  private.h  private.h.in  ripple.cpp  script3.h  stamp-h1  thread.cpp
 bayonne-cygwin --username wilson.tangweisheng/ccscript3-1.1.7/tests/: Makefile.am
 bayonne-cygwin --username wilson.tangweisheng/ccscript3-1.1.7/w32/: ccscript3.dsp  ccscript3.dsw  ccscript3.sln  ccscript3.vcproj  check.vcproj  csv.dsp  csv.vcproj  locker.dsp  locker.vcproj  math.vcproj  odbc.dsp  odbc.vcproj  string.vcproj  testscript.dsp  url.dsp  userauth.dsp
 bayonne-cygwin --username wilson.tangweisheng/ucommon-2.1.2/: BUILDS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  TODO  config.h  config.h.cmake  config.status  configure  libtool  ucommon-config  ucommon-config.1  ucommon.pc  ucommon.spec.in
 bayonne-cygwin --username wilson.tangweisheng/ucommon-2.1.2/inc/: Makefile.in
 bayonne-cygwin --username wilson.tangweisheng/ucommon-2.1.2/nbproject/: configurations.xml  (+1 more)
(+2671 files in other folders)
